compiler/testData/diagnostics/tests/generics/kt1575-ClassObject.kt
class CO<T> where <!UNSUPPORTED!>class object T : CO<T><!>